k8s/convert_compose/kafdrop-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/general_network_all_services: "true"
    io.kompose.service: kafdrop
  name: kafdrop
spec:
  containers:
  - env:
    - name: KAFKA_BROKERCONNECT
      value: kafka1:19091
    - name: SERVER_PORT
      value: "9001"
    image: obsidiandynamics/kafdrop
    name: kafdrop
    ports:
    - containerPort: 9001
    resources: {}
  hostname: kafdrop
  restartPolicy: OnFailure
status: {}
