k8s/convert_compose/kafka1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/general_network_all_services: "true"
    io.kompose.service: kafka1
  name: kafka1
spec:
  containers:
  - env:
    - name: KAFKA_ADVERTISED_LISTENERS
      value: LISTENER_DOCKER_INTERNAL://kafka1:19091,LISTENER_DOCKER_EXTERNAL://127.0.0.1:9091
    - name: KAFKA_BROKER_ID
      value: "1"
    - name: KAFKA_INTER_BROKER_LISTENER_NAME
      value: LISTENER_DOCKER_INTERNAL
    - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
      value: LISTENER_DOCKER_INTERNAL:PLAINTEXT,LISTENER_DOCKER_EXTERNAL:PLAINTEXT
    - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
      value: "1"
    - name: KAFKA_ZOOKEEPER_CONNECT
      value: zookeeper:2181
    image: confluentinc/cp-kafka:5.3.0
    name: kafka1
    ports:
    - containerPort: 9091
    resources: {}
  hostname: kafka1
  restartPolicy: OnFailure
status: {}
