k8s/convert_compose/sub-module-storage-atlant-clickhouse-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/general_network_all_services: "true"
    io.kompose.service: sub-module-storage-atlant-clickhouse
  name: sub-module-storage-atlant-clickhouse
spec:
  containers:
  - image: yandex/clickhouse-server
    name: sub-module-storage-atlant-clickhouse
    ports:
    - containerPort: 8123
    - containerPort: 9000
    resources: {}
  restartPolicy: OnFailure
status: {}
