k8s/convert_compose/sub-module-storage-atlant-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sub-module-storage-atlant-postgres
  name: sub-module-storage-atlant-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: sub-module-storage-atlant-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/general_network_all_services: "true"
        io.kompose.service: sub-module-storage-atlant-postgres
    spec:
      containers:
      - args:
        - postgres
        - -c
        - max_connections=5000
        image: postgres:13
        imagePullPolicy: ""
        name: sub-module-storage-atlant-postgres
        ports:
        - containerPort: 5432
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: psql-sub-module-storage-atlant
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: psql-sub-module-storage-atlant
        persistentVolumeClaim:
          claimName: psql-sub-module-storage-atlant
status: {}
