k8s/convert_compose/zookeeper-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    io.kompose.network/general_network_all_services: "true"
    io.kompose.service: zookeeper
  name: zookeeper
spec:
  containers:
  - env:
    - name: ZOO_MY_ID
      value: "1"
    - name: ZOO_PORT
      value: "2181"
    - name: ZOO_SERVERS
      value: server.1=zookeeper:2888:3888
    image: zookeeper:3.4.9
    name: zookeeper
    ports:
    - containerPort: 2181
    resources: {}
  hostname: zookeeper
  restartPolicy: OnFailure
status: {}
