k8s/convert_compose/jsonb-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: jsonb-service
  name: jsonb-service
spec:
  ports:
  - name: "5112"
    port: 5112
    targetPort: 5112
  selector:
    io.kompose.service: jsonb-service
status:
  loadBalancer: {}
