k8s/convert_compose/kafdrop-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafdrop
  name: kafdrop
spec:
  ports:
  - name: "9001"
    port: 9001
    targetPort: 9001
  selector:
    io.kompose.service: kafdrop
status:
  loadBalancer: {}
