k8s/convert_compose/kafka1-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka1
  name: kafka1
spec:
  ports:
  - name: "9091"
    port: 9091
    targetPort: 9091
  selector:
    io.kompose.service: kafka1
status:
  loadBalancer: {}
