k8s/convert_compose/sub-module-storage-atlant-clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sub-module-storage-atlant-clickhouse
  name: sub-module-storage-atlant-clickhouse
spec:
  ports:
  - name: "8123"
    port: 8123
    targetPort: 8123
  - name: "9000"
    port: 9000
    targetPort: 9000
  selector:
    io.kompose.service: sub-module-storage-atlant-clickhouse
status:
  loadBalancer: {}
