k8s/convert_compose/sub-module-storage-atlant-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sub-module-storage-atlant-postgres
  name: sub-module-storage-atlant-postgres
spec:
  ports:
  - name: "5432"
    port: 5432
    targetPort: 5432
  selector:
    io.kompose.service: sub-module-storage-atlant-postgres
status:
  loadBalancer: {}
