k8s/convert_compose/sub-module-storage-atlant-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: sub-module-storage-atlant
  name: sub-module-storage-atlant
spec:
  ports:
  - name: "5111"
    port: 5111
    targetPort: 5111
  selector:
    io.kompose.service: sub-module-storage-atlant
status:
  loadBalancer: {}
