k8s/convert_compose/general_network_all_services-networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: general_network_all_services
spec:
  ingress:
  - from:
    - podSelector:
        matchLabels:
          io.kompose.network/general_network_all_services: "true"
  podSelector:
    matchLabels:
      io.kompose.network/general_network_all_services: "true"
